--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             
             <section class="portfolio">
                 <div class="project">
-
+                    <h2>Project title</h2>
+                    <p>project description line1 project description line1 project description line1 project description line1project description line1 project description line1 project description line1 project description line1
+                        project description line1 project description line1 project description line1 project description line1 
+                    </p>
+                    <p>Live Page</p>
+                    <p>github</p>
                 </div>
                 <div class="project">
 
