working on third project

--- a/index.html
+++ b/index.html
@@ -18,25 +18,49 @@
         </header>
         <main role=main>
             <section class="hero">
-                <h1>I'm <span class="bolder-h1" >Rey</span>. Professionally, a burgeoning <span class="bolder-h1" >Fullstack Developer</span>, on my freetime I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
+                <h1>I'm <span class="bolder-h1" >Rey</span>, a burgeoning <span class="bolder-h1" >Fullstack Developer</span>. On my freetime I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
                     automate simple tasks.</span>
                 </h1>   
             </section>
             
             <section class="portfolio">
-                <div class="project">
-                    <h2>Project title</h2>
-                    <p>project description line1 project description line1 project description line1 project description line1project description line1 project description line1 project description line1 project description line1
-                        project description line1 project description line1 project description line1 project description line1 
+                <div class="project project1 project1-description">
+                    <h2>NBA Quiz Application</h2>
+                    <p>
+                        Client side web application to prep you for any upcoming NBA trivia night. 
+                        Study this and you will WIN any NBA historical trivia night.
                     </p>
-                    <p>Live Page</p>
-                    <p>github</p>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>Javascript: vanilla and JQuery</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <p>Take the test: <span><a target="_blank" href="https://rtanubra.github.io/quizapp/ ">NBA Quiz App</a></span> </p>
+                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/quizapp">Github-NBA Quiz Application</a></span></p>
                 </div>
-                <div class="project">
-
+                <div class="project project2 project2-description">
+                    <h2>Python Secret Santa Application</h2>
+                    <p>
+                        Put your names and emails in the imaginary hat and let Python sort who you are gifting this Christmas.
+                        This way you know no cheating in selecting your secret santa.
+                    </p>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Python-Pandas</li>
+                    </ul>
+                    <p>Check my flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
+                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
                 </div>
-                <div class="project">
-
+                <div class="project project3 project3-description">
+                    <h2>NBA Quiz Application</h2>
+                    <p>
+                        Client side web application to prep you for any upcoming NBA trivia night. 
+                        Study this and you will WIN any NBA historical trivia night.
+                    </p>
+                    <p>Check my flow <span><a target="_blank" href="https://rtanubra.github.io/quizapp/ ">Gist</a></span> </p>
+                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github</a></span></p>
                 </div>
             </section>
 
