working on third project content

--- a/index.html
+++ b/index.html
@@ -48,27 +48,31 @@
                     <h3>Technologies</h3>
                     <ul>
                         <li>Python</li>
-                        <li>Python-Pandas</li>
+                        <li>Python Frameworks: Pandas</li>
                     </ul>
                     <p>Check my flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
                     <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
                 </div>
                 <div class="project project3 project3-description">
-                    <h2>NBA Quiz Application</h2>
+                    <h2>Family Budgetting App</h2>
                     <p>
-                        Client side web application to prep you for any upcoming NBA trivia night. 
-                        Study this and you will WIN any NBA historical trivia night.
+                        Marriages break up more over money than anything else. 
+                        Let this family budgeting application be your technological couples therapist. 
+                        Dive deep into all your expenses and go from budgetarily challenged to personal finance hero.
                     </p>
-                    <p>Check my flow <span><a target="_blank" href="https://rtanubra.github.io/quizapp/ ">Gist</a></span> </p>
-                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github</a></span></p>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Python Frameworks: Django2</li>
+                        <li>HTML</li>
+                        <li>CSS, Bootstrap</li>
+                    </ul>
+                    <p>Check my flow <span><a target="_blank" href="https://gist.github.com/rtanubra/68566b3e733185df2042c76c76dd54dd">Gist-family budget</a></span> </p>
+                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/fam_finance2.0">Github-family budget</a></span></p>
                 </div>
             </section>
-
-
-
         </main>
         <footer role=footer>
-
         </footer>
     </body>
 </html>
