added third project

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <li>Python</li>
                         <li>Python Frameworks: Pandas</li>
                     </ul>
-                    <p>Check my flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
-                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
+                    <p>Work flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
+                    <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
                 </div>
                 <div class="project project3 project3-description">
                     <h2>Family Budgetting App</h2>
@@ -67,8 +67,8 @@
                         <li>HTML</li>
                         <li>CSS, Bootstrap</li>
                     </ul>
-                    <p>Check my flow <span><a target="_blank" href="https://gist.github.com/rtanubra/68566b3e733185df2042c76c76dd54dd">Gist-family budget</a></span> </p>
-                    <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/fam_finance2.0">Github-family budget</a></span></p>
+                    <p>Work flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/68566b3e733185df2042c76c76dd54dd">Gist-family budget</a></span> </p>
+                    <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/fam_finance2.0">Github-family budget</a></span></p>
                 </div>
             </section>
         </main>
