--- a/index.html
+++ b/index.html
@@ -71,8 +71,20 @@
                     <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/fam_finance2.0">Github-family budget</a></span></p>
                 </div>
             </section>
+
+            <section class="about-me">
+                <h2>About Me</h2>
+                <p>
+                    I am a Web Developer Student at Bloc Thinkful. My Goal is to automate and rid the world of 'tasks' to free us up for big projects!
+                    I love working on two main types of projects. Simplifying complex inputs (like deciding if the Toronto Raptors should trade Kawhi Leonard for Kyle Kuzma now!) 
+                    and atomating repetitive tasks (like a budgeting app to send email remainders when to pay recurring bills)
+                </p>
+            </section>
         </main>
-        <footer role=footer>
+        <footer class="bottom">
+            <div class="github" ></div>
+            <div class="linkedin" ></div>
+            <div></div>
         </footer>
     </body>
 </html>
