--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>ReyT Portfolio Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
@@ -15,22 +15,25 @@
             <div class="head topnav">
                 <i id="navigation-burger" class="fa fa-bars"></i>    
             </div>
+            <h1>Code, Create, Repeat</h1>
         </header>
         <main role=main>
             <section class="hero">
-                <h1>I'm <span class="bolder-h1" >Rey</span>, a burgeoning <span class="bolder-h1" >Fullstack Developer</span>. On my freetime I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
+                <h2>Rey Tanubrata</h2>
+                <p>A burgeoning <span class="bolder-h1" >Fullstack Developer</span>. On my freetime I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
                     automate simple tasks.</span>
-                </h1>   
+                </p>   
             </section>
             
             <section class="portfolio">
+                <h3>Portfolio:</h3>
                 <div class="project project1 project1-description">
-                    <h2>NBA Quiz Application</h2>
+                    <h3>NBA Quiz Application</h3>
                     <p>
                         Client side web application to prep you for any upcoming NBA trivia night. 
                         Study this and you will WIN any NBA historical trivia night.
                     </p>
-                    <h3>Technologies</h3>
+                    <h4>Technologies</h4>
                     <ul>
                         <li>Javascript: vanilla and JQuery</li>
                         <li>HTML</li>
@@ -40,12 +43,12 @@
                     <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/quizapp">Github-NBA Quiz Application</a></span></p>
                 </div>
                 <div class="project project2 project2-description">
-                    <h2>Python Secret Santa Application</h2>
+                    <h3>Python Secret Santa Application</h3>
                     <p>
                         Put your names and emails in the imaginary hat and let Python sort who you are gifting this Christmas.
                         This way you know no cheating in selecting your secret santa.
                     </p>
-                    <h3>Technologies</h3>
+                    <h4>Technologies</h4>
                     <ul>
                         <li>Python</li>
                         <li>Python Frameworks: Pandas</li>
@@ -54,13 +57,13 @@
                     <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
                 </div>
                 <div class="project project3 project3-description">
-                    <h2>Family Budgetting App</h2>
+                    <h3>Family Budgetting App</h3>
                     <p>
                         Marriages break up more over money than anything else. 
                         Let this family budgeting application be your technological couples therapist. 
                         Dive deep into all your expenses and go from budgetarily challenged to personal finance hero.
                     </p>
-                    <h3>Technologies</h3>
+                    <h4>Technologies</h4>
                     <ul>
                         <li>Python</li>
                         <li>Python Frameworks: Django2</li>
@@ -82,9 +85,9 @@
             </section>
         </main>
         <footer class="bottom">
-            <div class="github" ></div>
-            <div class="linkedin" ></div>
-            <div></div>
+            <a href="https://github.com/rtanubra" target="_blank" ><img class="github" src="images/contact-icons/github64.png" alt="github view Rey Tanubrata's github"> </a>
+            <a href="mailto:rdtanubrata@gmail.com?subject=Contact%20Request" ><img class="email" src="http://iconsetc.com/icons-watermarks/flat-rounded-square-white-on-black/aiga/aiga_mail/aiga_mail_flat-rounded-square-white-on-black_512x512.png" alt="email icon email link" ></a>
+            <a href="https://www.linkedin.com/in/rey-tanubrata-25705167/?originalSubdomain=ca" target="_blank"> <img class="linkedin" src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="linked in logo, connect with Rey Tanubrata on Linked in"> </a>
         </footer>
     </body>
 </html>
