some grammatical changes and word play.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <main role=main>
             <section class="hero">
                 <h2>Rey Tanubrata</h2>
-                <p>A burgeoning <span class="bolder-h1" >Fullstack Developer</span>. On my freetime I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
-                    automate simple tasks.</span>
+                <p>I am a burgeoning <span class="bolder-h1" >Fullstack Developer</span>. On my free time, I use <span class="bolder-h1" >Python</span> to overengineer and <span class="bolder-h1" >
+                    automate boring tasks.</span>
                 </p>   
             </section>
             
@@ -36,7 +36,7 @@
                 <div class="project project1 project1-description">
                     <h3>NBA Quiz Application</h3>
                     <p>
-                        Client side web application to prep you for any upcoming NBA trivia night. 
+                        Client-side web application to prep you for any upcoming NBA trivia night. 
                         Study this and you will WIN any NBA historical trivia night.
                     </p>
                     <h4>Technologies</h4>
@@ -51,8 +51,8 @@
                 <div class="project project2 project2-description">
                     <h3>Python Secret Santa Application</h3>
                     <p>
-                        Put your names and emails in the imaginary hat and let Python sort who you are gifting this Christmas.
-                        This way you know no cheating in selecting your secret santa.
+                        Put your names and emails in the imaginary hat and let Python sort who you are gifting this Christmas. 
+                        Let Python guide you in making your Secret Santa selection this year.
                     </p>
                     <h4>Technologies</h4>
                     <ul>
@@ -84,9 +84,11 @@
             <section class="about-me">
                 <h2>About Me</h2>
                 <p>
-                    I am a Web Developer Student at Bloc Thinkful. My Goal is to automate and rid the world of 'tasks' to free us up for big projects!
-                    I love working on two main types of projects. Simplifying complex inputs (like deciding if the Toronto Raptors should trade Kawhi Leonard for Kyle Kuzma now!) 
-                    and atomating repetitive tasks (like a budgeting app to send email remainders when to pay recurring bills)
+                    I am a Web Developer Student at Bloc Thinkful. 
+                    My Goal is to rid the world of 'boring tasks,' to free us up for big creative projects!
+                    I love projects that demystify and simplify complex inputs (like deciding who to trade in fantasy basketball). 
+                    I also love projects that automate repetitive tasks (like a budgeting app that remind you if you've forgotten to pay those pesky bills).
+                    Outside of work, I enjoy learning how I can use coding to overengineer the simplest things like fishkeeping and gardening. 
                 </p>
             </section>
         </main>
