storing images in repo

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </main>
         <footer class="bottom">
             <a href="https://github.com/rtanubra" target="_blank" ><img class="github" src="images/contact-icons/github64.png" alt="github view Rey Tanubrata's github"> </a>
-            <a href="mailto:rdtanubrata@gmail.com?subject=Contact%20Request" ><img class="email" src="http://iconsetc.com/icons-watermarks/flat-rounded-square-white-on-black/aiga/aiga_mail/aiga_mail_flat-rounded-square-white-on-black_512x512.png" alt="email icon email link" ></a>
-            <a href="https://www.linkedin.com/in/rey-tanubrata-25705167/?originalSubdomain=ca" target="_blank"> <img class="linkedin" src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="linked in logo, connect with Rey Tanubrata on Linked in"> </a>
+            <a href="mailto:rdtanubrata@gmail.com?subject=Contact%20Request" ><img class="email" src="images/contact-icons/email.png" alt="email icon email link" ></a>
+            <a href="https://www.linkedin.com/in/rey-tanubrata-25705167/?originalSubdomain=ca" target="_blank"> <img class="linkedin" src="images/contact-icons/linkedin.png" alt="linked in logo, connect with Rey Tanubrata on Linked in"> </a>
         </footer>
     </body>
 </html>
