--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div class="head topnav">
                 <ul role="navigation" class="navlinks">
-                    <li class="navlink"><a class="navanchor anchor js-portfolio-nav" href="#target-portfolio">Portfolio</a></li>
-                    <li class="navlink" ><a class="navanchor anchor js-about-nav" href="#taget-about-me"  >About</a></li>
+                    <li class="navlink"><a class="navanchor anchor js-portfolio-nav" href="">Portfolio</a></li>
+                    <li class="navlink" ><a class="navanchor anchor js-about-nav" href=""  >About</a></li>
                 </ul>
             </div>
             <h1>Code, Create, Repeat</h1>
