--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <p>Take the test: <span><a target="_blank" href="https://rtanubra.github.io/quizapp/ ">NBA Quiz App</a></span> </p>
                     <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/quizapp">Github-NBA Quiz Application</a></span></p>
                 </div>
+                <img src="images/project-snaps/project1/project1_question.png" alt="NBA Quiz question example." class="project-picture"/>
                 <div class="project project2 project2-description">
                     <h3>Python Secret Santa Application</h3>
                     <p>
@@ -69,6 +70,7 @@
                     <p>Work flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
                     <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
                 </div>
+                <img src="images/project-snaps/project2/code_snip.png" alt="Code snippet, selecting secret santa name." class="project-picture">
                 <div class="project project3 project3-description">
                     <h3>Family Budgetting App</h3>
                     <p>
@@ -86,6 +88,7 @@
                     <p id="taget-about-me" >Work flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/68566b3e733185df2042c76c76dd54dd">Gist-family budget</a></span> </p>
                     <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/fam_finance2.0">Github-family budget</a></span></p>
                 </div>
+                <img src="images/project-snaps/project3/summary.png" alt="Summary expenses example for Rey March 2019" class="project-picture">
             </section>
             <section class="about-me" id="about-me">
                 <h2>About Me</h2>
