autoscroll for different viewports

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 
                 <div class="project-outer">
                     <div class="project project2 project2-description">
-                        <h3>Python Secret Santa Application</h3>
+                        <h3 class=h3-inner >Python Secret Santa Application</h3>
                         <p>
                             Put your names and emails in the imaginary hat and let Python sort who you are gifting this Christmas. 
                             Let Python guide you in making your Secret Santa selection this year.
