first draft final

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         </p>
                         <h4>Technologies</h4>
                         <ul>
-                            <li>Javascript: vanilla and JQuery</li>
+                            <li>Javascript</li>
+                            <li>JQuery</li>
                             <li>HTML</li>
                             <li>CSS</li>
                         </ul>
@@ -68,8 +69,8 @@
                         </p>
                         <h4>Technologies</h4>
                         <ul>
-                            <li>Python</li>
-                            <li>Python Frameworks: Pandas</li>
+                            <li>Python3</li>
+                            <li>Pandas</li>
                         </ul>
                         <p>Work flow: <span><a target="_blank" href="https://gist.github.com/rtanubra/313646ea332c9f12f5c7869ed2579b83 ">Gist-Python Secret Santa Flow</a></span> </p>
                         <p>Repo: <span><a target="_blank" href="https://github.com/rtanubra/Secret_santa_email ">Github-Python Secret Santa</a></span></p>
@@ -87,8 +88,8 @@
                         </p>
                         <h4>Technologies</h4>
                         <ul>
-                            <li>Python</li>
-                            <li>Python Frameworks: Django2</li>
+                            <li>Python3</li>
+                            <li>Django2</li>
                             <li>HTML</li>
                             <li>CSS, Bootstrap</li>
                         </ul>
