--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header role=banner >
-            <img src="images/logos/logo1.png" alt="Rey Tanubrata logo, an R and T" class="head logo">
+            <img src="images/logos/white_short_logo.png" alt="Rey Tanubrata logo, an R and T" class="head logo">
             <div class="head topnav">
                 <ul role="navigation" class="navlinks">
                     <li class="navlink"><a class="navanchor anchor js-portfolio-nav" href="">Portfolio</a></li>
