--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <h2>Portfolio:</h2>
                 <div class= project-outer>
                     <div class="project project1 project1-description">
-                        <h3>NBA Quiz Application</h3>
+                        <h3>Stock Dashboard</h3>
                         <p>
-                            Client-side web application to prep you for any upcoming NBA trivia night. 
-                            Study this and you will WIN any NBA historical trivia night.
+                            A simple stock application. Pulls information from the last trading day,
+                            recent history and significant news items to keep you up to date.
                         </p>
                         <h4>Technologies</h4>
                         <ul>
@@ -52,10 +52,10 @@
                             <li>HTML</li>
                             <li>CSS</li>
                         </ul>
-                        <p>Take the test: <span><a target="_blank" href="https://rtanubra.github.io/quizapp/ ">NBA Quiz App</a></span> </p>
-                        <p>Check my code: <span><a target="_blank" href="https://github.com/rtanubra/quizapp">Github-NBA Quiz Application</a></span></p>
+                        <p>Search some stocks: <span><a target="_blank" href="https://github.com/rtanubra/stock_dashboard">NBA Quiz App</a></span> </p>
+                        <p>Check my code: <span><a target="_blank" href="https://rtanubra.github.io/stock_dashboard/">Github-NBA Quiz Application</a></span></p>
                     </div>
-                    <img src="images/project-snaps/project1/project1_question.png" alt="NBA Quiz question example." class="project-picture"/>
+                    <img src="images/project-snaps/project1/stock_dashboard.png" alt="Numbers section of stock dashboard. Dig into the numbers for your company" class="project-picture"/>
                 </div>
                 
                 <div class="project-outer">
