fixed text mistake for new project

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <li>HTML</li>
                             <li>CSS</li>
                         </ul>
-                        <p>Search some stocks: <span><a target="_blank" href="https://github.com/rtanubra/stock_dashboard">NBA Quiz App</a></span> </p>
-                        <p>Check my code: <span><a target="_blank" href="https://rtanubra.github.io/stock_dashboard/">Github-NBA Quiz Application</a></span></p>
+                        <p>Search some stocks: <span><a target="_blank" href="https://github.com/rtanubra/stock_dashboard">Stock Dashboard</a></span> </p>
+                        <p>Check my code: <span><a target="_blank" href="https://rtanubra.github.io/stock_dashboard/">Github: Stock Dashboard</a></span></p>
                     </div>
                     <img src="images/project-snaps/project1/stock_dashboard.png" alt="Numbers section of stock dashboard. Dig into the numbers for your company" class="project-picture"/>
                 </div>
